Revert "fix(shop): Aligner prix et boutons des cards produit"
This reverts commit e41f0a084d4f1f7ff818eb00617e25214e1b4ebd.

--- a/style.css
+++ b/style.css
@@ -10339,23 +10339,10 @@ transform: translateY(15px);
   color: var(--color-white);
 }
 
-/* Product Card Link - flex to align info */
-.product-card-cinetique .product-card-link {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  text-decoration: none;
-  color: inherit;
-}
-
 /* Product Info */
 .product-card-cinetique .product-info {
   padding: 2rem;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
 }
-
 
 .product-card-cinetique .product-name {
   font-family: var(--font-body);
@@ -10381,7 +10368,6 @@ transform: translateY(15px);
 }
 
 .product-card-cinetique .product-price {
-  margin-top: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
